--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "::set-output name=today::$(date +'%Y.%m.%d')"
 
       - name: Zip folder
-        run: zip -r $RELEASE_NAME.zip README "ammo maker" "remote_ied" "streamlined_upgrades"
+        run: zip -r $RELEASE_NAME.zip README "ammo maker" "remote_ied" "streamlined_upgrades" "dropit"
         env: 
           RELEASE_NAME: ${{ github.event.repository.name }}.${{ steps.date.outputs.today }}
       
