--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
           cp -r anomaly-dependencies/trader_autoinject/gamedata remote_ied
           cp -r anomaly-dependencies/workshop_autoinject/gamedata remote_ied
           cp -r anomaly-dependencies/workshop_autoinject/gamedata streamlined_upgrades
+          cp -r anomaly-dependencies/workshop_autoinject/gamedata itemsaves
 
       - name: Get current date
         id: date
