--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = anomaly-dependencies
 	url = https://github.com/ahuyn/anomaly-dependencies.git
 	branch = master
+[submodule "anomaly-demonized-scripts"]
+	path = anomaly-demonized-scripts
+	url = https://github.com/themrdemonized/anomaly-demonized-scripts.git
+	branch = master
